--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
-
+  <title>Todo</title>
+  <script src="/static/javascript/react.js"></script>
+  <script src="/static/javascript/JSXTransformer.js"></script>
+  <!-- :(, I know. But it simplyfies ajax calls! -->
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script type="text/jsx" src="/static/javascript/todo.js"></script>
 </head>
 <body>
   {% for message in get_flashed_messages() %}
