--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,9 @@
   <!-- :(, I know. But it simplyfies ajax calls! -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/jsx" src="/static/javascript/todo.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css">
 </head>
 <body>
   {% for message in get_flashed_messages() %}
