--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <head>
   <title>Todo</title>
-  <script src="/static/javascript/react.js"></script>
-  <script src="/static/javascript/JSXTransformer.js"></script>
+  <!-- dependencies! -->
+  <script src="/static/components/react/react.js"></script>
+  <script src="/static/components/react/JSXTransformer.js"></script>
+  <script src="/static/components/underscore/underscore.js"></script>
   <!-- :(, I know. But it simplyfies ajax calls! -->
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="/static/components/jquery/dist/jquery.min.js"></script>
+  <!-- avoid reeinventing the wheel, no matter how fun it is! -->
+  <script src="/static/components/react-sortable/src/Sortable.js"></script>
+
+  <!-- the app! -->
   <script type="text/jsx" src="/static/javascript/todo.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+
+  <!-- styles! -->
+  <link rel="stylesheet" type="text/css" href="/static/components/normalize/normalize.css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css">
+
+  <!-- meta! -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
