--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,8 +2,8 @@
 <head>
   <title>Todo</title>
   <!-- dependencies! -->
-  <script src="/static/components/react/react.js"></script>
-  <script src="/static/components/react/JSXTransformer.js"></script>
+  <script src="/static/components/react/dist/react.js"></script>
+  <script src="/static/components/react/dist/JSXTransformer.js"></script>
   <script src="/static/components/underscore/underscore.js"></script>
   <!-- :(, I know. But it simplyfies ajax calls! -->
   <script src="/static/components/jquery/dist/jquery.min.js"></script>
@@ -14,7 +14,7 @@
   <script type="text/jsx" src="/static/javascript/todo.js"></script>
 
   <!-- styles! -->
-  <link rel="stylesheet" type="text/css" href="/static/components/normalize/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/static/components/normalize.css/normalize.css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="/static/stylesheet/style.css">
 
