--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,9 @@
   <script src="/static/components/react-sortable/src/Sortable.js"></script>
 
   <!-- the app! -->
+  <script type="text/jsx" src="/static/javascript/todo_app.js"></script>
+  <script type="text/jsx" src="/static/javascript/todo_form.js"></script>
+  <script type="text/jsx" src="/static/javascript/todo_list.js"></script>
   <script type="text/jsx" src="/static/javascript/todo.js"></script>
 
   <!-- styles! -->
